more updates to the abstract and completed the tagging

--- a/article/git_emr.tex
+++ b/article/git_emr.tex
@@ -30,8 +30,8 @@
 
 \begin{document}
 
-\title{ Distributed Database Systems for Electronic Medical Records \titlenote{}}
-\subtitle{ \titlenote{} }
+\title{ Distributed Database Systems for Electronic Medical Records }%\titlenote{}}
+%\subtitle{ \titlenote{} }
 %
 % You need the command \numberofauthors to handle the 'placement
 % and alignment' of the authors beneath the title.
@@ -103,24 +103,23 @@ Kurt Rudolph\titlenote{Kurt also serves as The Muldowney Foundation Directory of
 
 \maketitle
 \begin{abstract}
-This paper discusses the application of distributed database systems to electronic 
-medical records (EMRs).
-Distributed database system generally do not guarantee data integrity and in turn 
-software applications performing CRUD operations to EMR's rarely employ distributed 
-database systems.
-However, methods for ensuring data integrity withing distributed database system exist
-and have successfully been successfully applied on small scales comparable to the scale
-of EMRs.
+This paper describes \textit{distributed database systems} applied to \textit{electronic 
+medical records}.
+\textit{Distributed database systems} generally do not guarantee data integrity and in turn 
+they rarely applied to \textit{electronic medical records}.
+However, methods for ensuring data integrity in \textit{distributed database systems} exist
+and have successfully been successfully appllication comprable to \textit{electronic medical 
+records}.
 \end{abstract}
 
 % A category with the (minimum) three required fields
-\category{H.4}{Information Systems Applications}{Miscellaneous}
+\category{E.1}{Data Structures}{distributed data structures, records}
 %A category including the fourth, optional field follows...
-\category{D.2.8}{Software Engineering}{Metrics}[complexity measures, performance measures]
+\category{H.2.4}{Database Management}{Systems}[distributed databases, concurrency]
 
-\terms{Theory}
+\terms{}
 
-\keywords{ACM proceedings, \LaTeX, text tagging} % NOT required for Proceedings
+\keywords{}
 
 \section{Introduction}
 The \textit{proceedings} are the records of a conference.
