--- a/article/git_emr.tex
+++ b/article/git_emr.tex
@@ -106,9 +106,9 @@ Kurt Rudolph\titlenote{Kurt also serves as The Muldowney Foundation Directory of
 This paper describes \textit{distributed database systems} applied to \textit{electronic 
 medical records}.
 \textit{Distributed database systems} generally do not guarantee data integrity and in turn 
-they rarely applied to \textit{electronic medical records}.
-However, methods for ensuring data integrity in \textit{distributed database systems} exist
-and have successfully been successfully appllication comprable to \textit{electronic medical 
+they are rarely applied to \textit{electronic medical records}.
+However, methods ensuring data integrity in \textit{distributed database systems}
+have successfully been utilized in comparable applications to \textit{electronic medical 
 records}.
 \end{abstract}
 
@@ -122,17 +122,8 @@ records}.
 \keywords{}
 
 \section{Introduction}
-The \textit{proceedings} are the records of a conference.
-ACM seeks to give these conference by-products a uniform,
-high-quality appearance.  To do this, ACM has some rigid
-requirements for the format of the proceedings documents: there
-is a specified format (balanced  double columns), a specified
-set of fonts (Arial or Helvetica and Times Roman) in
-certain specified sizes (for instance, 9 point for body copy),
-a specified live area (18 $\times$ 23.5 cm [7" $\times$ 9.25"]) centered on
-the page, specified size of margins (1.9 cm [0.75"]) top, (2.54 cm [1"]) bottom
-and (1.9 cm [.75"]) left and right; specified column width
-(8.45 cm [3.33"]) and gutter size (.83 cm [.33"]).
+The distribution of information pertaining to given individual is 
+
 
 The good news is, with only a handful of manual
 settings\footnote{Two of these, the {\texttt{\char'134 numberofauthors}}
