updated the introduction

--- a/article/git_emr.tex
+++ b/article/git_emr.tex
@@ -30,7 +30,7 @@
 
 \begin{document}
 
-\title{ Distributed Version Control for Electronic Medical Records }%\titlenote{}}
+\title{GitEMR: A Distributed Version Control System for Electronic Medical Records}%\titlenote{}}
 %\subtitle{ \titlenote{} }
 %
 % You need the command \numberofauthors to handle the 'placement
@@ -125,25 +125,18 @@ of managing \textit{electronic medical records}.
 \keywords{Electronic Medical Records, Distributed Database Systems}
 
 \section{Introduction}
-Electronic medical records (EMRs) have recently begun their adolescence.  
+\textit{Electronic medical records} (\textit{EMRs}) have recently begun their adolescence.  
 Current applications managing the data of EMRs have demonstrated the benefits
 of storing medical records electronically and offer insight into the 
 applicability of distributed version control to EMRs.
 
-EMRs generally maintain extremely sensitive data.  Accuracy of all data
-maintained by an EMR potentially determines the survival of the individual a record 
-reflects.  Access to data maintained by an EMR is generally restricted, only accessible 
-to those authorized the indivual a reflects.
+More mature methods for managing \textit{EMRs} are neccicary for the continued advancement of
+medical applications.  Currently employed methods limit medical data analysis, hinder
+collaborative modification, and are unnessarily costly.
 
-Current application managing the data of EMRs are generally extremely costly.  
-Applications are generally costly in terms of initial acquisition, continued maintenance, 
-and accessibility.
-
-This Applying distributed database systems to applications which manage the data of EMRs
-potentially offers a more efficient and effective method 
-
-creating, reading, and updating are needed.
-
+Features offered by Git version control are suiting for the management of \textit{EMRs} and 
+offers a well established base for building an efficient and effective system of managing
+electronic medical records.
 
 \subsection{Audience}
 Medical professionals, and in particular those tasked with aggregation and analysis of medical data.
@@ -189,6 +182,25 @@ The accessibility of the
 
 \subsection{Applicability}
 \subsection{Issues}
+
+
+
+\section{Random stuff}
+EMRs generally maintain extremely sensitive data.  Accuracy of all data
+maintained by an EMR potentially determines the survival of the individual a record 
+reflects.  Access to data maintained by an EMR is generally restricted, only accessible 
+to those authorized the indivual a reflects.
+
+Applications are generally costly in terms of initial acquisition, continued maintenance, 
+and accessibility.
+
+
+
+
+This Applying distributed database systems to applications which manage the data of EMRs
+potentially offers a more efficient and effective method 
+
+creating, reading, and updating are needed.
 
 
 
